--- a/layouts/shortcodes/slides.html
+++ b/layouts/shortcodes/slides.html
@@ -1,3 +1,3 @@
-<iframe width="768" height="576" frameborder="0" allowfullscreen="allowfullscreen" src="{{ .Get 0 }}">
+<iframe loading="lazy" width="768" height="576" frameborder="0" allow="fullscreen" src="{{ .Get 0 }}">
     Unable to display slides, please see: {{ .Get 0 }}
 </iframe>
